# web_project

./: .gitignore  LICENSE  README.md  pyproject.toml
hello/: views.py
hello/templates/hello/: about.html  hello_there.html  layout.html
web_project/: settings.py  urls.py
